TAG: qcreports_db-6-0-8-12
DATE: 03/28/2017
STAFF: sc
CHANGES: TR12543 - archive GO report
1) adding archive of report to qcnightly_reports.csh
2) updated GO archive bullet 14 description:  qcr.shtml

TAG: qcreports_db-6-0-8-11
DATE: 03/14/2017
STAFF: lec
CHANGES: 
mgd/MRK_Alleles.sql : exclude "reserved" marker symbols

TAG: qcreports_db-6-0-8-10
DATE: 03/13/2017
STAFF: sc
CHANGES: TR12489 - bug fix to  MRK_PRO_NoGO.rpt

TAG: qcreports_db-6-0-8-9
TAG: qcreports_db-6-0-8-8
DATE: 02/23/2017, 03/02/2017
STAFF: lec
CHANGES: 
TR12491/J:226028/Lewondowski
TR12427/remove obsolete vocload reports
vocload/OMIM/OMIM.clusters.diff1
vocload/OMIM/OMIM.clusters.diff2

TAG: qcreports_db-6-0-8-7
DATE: 02/21/2017
STAFF: sc
CHANGES: TR12105 new allele reference QC rpt

TAG: qcreports_db-6-0-8-6
TAG: qcreports_db-6-0-8-5
DATE: 02/17/2017
STAFF: lec
CHANGES: 
TR12427/Disease Ontology (DO)/qcr.shtml
TR12528/PRB_StrainJAX2.py

TAG: qcreports_db-6-0-8-4
DATE: 02/15/2017
STAFF: sc
CHANGES: TR12489 - new report Papers selected for 'PRO' but not used

TAG: qcreports_db-6-0-8-3
TAG: qcreports_db-6-0-8-2
DATE: 10/19/2016, 02/14/2017
STAFF: lec
CHANGES: 
TR12427/Disease Ontology (DO)
TR11083/NOM_Marker obsolete/merged with MRK_Marker
TR12528/PRB_StrainJAX2.py
mgd/MRK_QTL.py
mgd/HMD_SymbolDiffs.py
mgd/MRK_GOIEA.py
TR12449/J Neuosci/GXD_Images.py
add:
VOC_OMIMGenotypeNoMapDO.py
VOC_OMIMDOMult.py
VOC_OMIMDOObsolete.py
VOC_DOAnnotNotInSlim.sql
obsolete: db.setAutoTranslate

TAG: qcreports_db-6-0-7-7
DATE: 02/09/2017
STAFF sc
CHANGES:
TR12505/copyright statements for 2 journals
mgd/GXD_Images.py

TAG: qcreports_db-6-0-7-6
TAG: qcreports_db-6-0-7-5
DATE: 1/19/2017
STAFF sc
CHANGES: TR12494
1) new weekly/MRK_C4AM_GeneModel.py

TAG: qcreports_db-6-0-7-4
DATE: 1/17/2017
STAFFsc
CHANGES: TR12510
1) weekely/GXD_HTExpCuration.py: Moved to daily
2) weekely/GXD_HTNoMasterBib.py: Moved to daily
3) monthly/GXD_HTOverview.py: Moved to daily

TAG: qcreports_db-6-0-7-3
DATE: 1/13/2017
STAFF: sc