@@ -1,3 +1,9 @@
+TAG: qcreports_db-6-0-8-13
+DATE: 04/06/2017
+STAFF: sc
+CHANGES: TR12523 Tweak to GXD_HTOverview report and swap order
+   of HT reports 2 and 3 on index page.
+
 TAG: qcreports_db-6-0-8-12
 DATE: 03/28/2017
 STAFF: sc
